<resources>
    <string name="app_name">StoryApp</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="tv_login">Create Your Story!</string>
    <string name="tv_register">Create Your Account!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="tv_sign_up">Do not have an account yet?</string>
    <string name="btn_sign_up">Sign up</string>

    <string name="logout">Logout</string>

    <string name="email_taken">Email already taken!</string>
    <string name="login_failed">Login failed! Please check your email and password again!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>