<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.RegisterActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_register"
        android:transitionName="header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/roundedTopCorners" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/medium"
        android:text="@string/tv_register"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/input1"
        app:layout_constraintEnd_toStartOf="@id/logo_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_register"
        app:layout_constraintBottom_toBottomOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_register"
        app:layout_constraintTop_toTopOf="@id/tv_register" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_name"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="2dp"
        android:textColorHint="@color/text_color_gray"
        android:orientation="vertical"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:helperTextTextColor="@color/blue"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:hintTextColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/input2"
        app:layout_constraintTop_toBottomOf="@id/tv_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/custom_ic_name"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/text_color_gray"
        android:orientation="vertical"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:helperTextTextColor="@color/blue"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:hintTextColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/input3"
        app:layout_constraintTop_toBottomOf="@id/input1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/custom_ic_email"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/text_color_gray"
        android:orientation="vertical"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:hintTextColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/input2">

        <com.rifqiananda.storyapp.ui.custom.MyEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/custom_ic_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/bold"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/iv_header"
        app:layout_constraintEnd_toEndOf="@id/input2"
        app:layout_constraintStart_toStartOf="@id/input2"
        app:layout_constraintTop_toBottomOf="@id/input3" />

</androidx.constraintlayout.widget.ConstraintLayout>